added README + changes in simulator

--- a/templates/start_page.html
+++ b/templates/start_page.html
@@ -14,6 +14,10 @@
       <input type=radio name=binning value='2x2'> 2x2<br>
       <input type=radio name=binning value='3x3'> 3x3<br>
       <input type=radio name=binning value='4x4'> 4x4
+      <dt>Set color channel: <br>
+      <input type=checkbox name=color_channel value='red'> Red<br>
+      <input type=checkbox name=color_channel value='green'> Green<br>
+      <input type=checkbox name=color_channel value='bright_field'> Bright field<br>      
     </dl>
 </form>
 </body>
