--- a/templates/start_page.html
+++ b/templates/start_page.html
@@ -10,10 +10,10 @@
       <dd><input type=number step=0.001 min=0.001 name=interval>
       <dd><input type=submit value=Submit>
       <dt>Set binning: <br>
-      <input type=radio name=binning value='1x1'> 1x1<br>
-      <input type=radio name=binning value='2x2'> 2x2<br>
-      <input type=radio name=binning value='3x3'> 3x3<br>
-      <input type=radio name=binning value='4x4'> 4x4
+      <input type=radio name=binning value='1'> 1x1<br>
+      <input type=radio name=binning value='2'> 2x2<br>
+      <input type=radio name=binning value='3'> 3x3<br>
+      <input type=radio name=binning value='4'> 4x4
       <dt>Set color channel: <br>
       <input type=checkbox name=color_channel value='red'> Red<br>
       <input type=checkbox name=color_channel value='green'> Green<br>
