added kafka_producer trying to connect kafka and simulator

--- a/templates/file_walk_page.html
+++ b/templates/file_walk_page.html
@@ -20,9 +20,11 @@
             <input type=radio name=binning value=3> 3x3<br>
             <input type=radio name=binning value=4> 4x4
         <dt>Set color channel: <br>
-            <input type=checkbox name=color_channel value='red'> Red<br>
-            <input type=checkbox name=color_channel value='green'> Green<br>
-            <input type=checkbox name=color_channel value='bright_field'> Bright field<br>
+            <input type=checkbox name=color_channel value=1> 1<br>
+            <input type=checkbox name=color_channel value=2> 2<br>
+            <input type=checkbox name=color_channel value=3> 3<br>
+            <input type=checkbox name=color_channel value=4> 4<br>
+            <input type=checkbox name=color_channel value=5> 5<br>
     </dl>
 </form>
 </body>
