separating simulator from flask

--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -8,6 +8,8 @@
     <dl>
         <dt>File with run information (JSON format):
         <dd><input type="text" name="file_path"><br>
+        <dt>Number of runs:
+        <dd><input type=number step=1 min=1 name=runs>
         <dd><input type=submit value=Submit>
     </dl>
 </form>
