--- a/templates/file_walk_page.html
+++ b/templates/file_walk_page.html
@@ -12,7 +12,7 @@
         <dt>File path to image storage:
         <dd><input type="text" name="file_path"><br>
         <dt>Set interval (seconds):
-        <dd><input type=number step=0.001 min=0.001 name=interval>
+        <dd><input type=number step=0.001 min=0.001 name=period>
         <dd><input type=submit value=Submit>
         <dt>Set binning: <br>
             <input type=radio name=binning value=1> 1x1<br>
